[gd_scene load_steps=2 format=2]

[ext_resource path="res://EnemySpawner.gd" type="Script" id=1]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnPositions" type="Node2D" parent="."]

[node name="SpawnPosition_01" type="Position2D" parent="SpawnPositions"]
position = Vector2( 1600, 88 )

[node name="SpawnPosition_02" type="Position2D" parent="SpawnPositions"]
position = Vector2( 1600, 238 )

[node name="SpawnPosition_03" type="Position2D" parent="SpawnPositions"]
position = Vector2( 1600, 388 )

[node name="SpawnPosition_04" type="Position2D" parent="SpawnPositions"]
position = Vector2( 1600, 538 )

[node name="SpawnPosition_05" type="Position2D" parent="SpawnPositions"]
position = Vector2( 1600, 688 )

[node name="SpawnPosition_06" type="Position2D" parent="SpawnPositions"]
position = Vector2( 1598, 23 )

[node name="SpawnPosition_07" type="Position2D" parent="SpawnPositions"]
position = Vector2( 1598, 173 )

[node name="SpawnPosition_08" type="Position2D" parent="SpawnPositions"]
position = Vector2( 1598, 323 )

[node name="SpawnPosition_09" type="Position2D" parent="SpawnPositions"]
position = Vector2( 1598, 473 )

[node name="SpawnPosition_10" type="Position2D" parent="SpawnPositions"]
position = Vector2( 1598, 623 )

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
